# NewsSentry

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE-PROMPT.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.browser  Dockerfile.core  Dockerfile.full  LICENSE  MAKE_GUIDE.md  Makefile  README.md  README_en.md  README_zh.md  SECURITY.md  check.sh  design-qa.md  docker-compose.yml  docker-entrypoint.sh  install.sh  mypy.ini  news-sentry.spec  opencode.json  package.json  prd.json  progress.txt  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  run.ps1  run.sh
.codex/automations/: news-sentry-test.yaml
.cursor/rules/: news-sentry-core.mdc
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  research_workflow_request.md  source_request.md
.github/workflows/: ci.yml  deploy.yml  docker.yml  lint.yml  public-translation-backfill.yml  release.yml  scan-secrets.yml  source-health.yml  test.yml
.planning/brainstorming/: AIProvider与模型路由规格.md  AgentSkillPack开发总纲与多Agent生产线路线图.md  RSS-API采集子Skill规格.md  ToolManifest与工具适配层规格.md  agent-skill-ecosystem-survey.md  information-acquisition-chains.md  kol-tracking-and-source-management.md  开源舆情监控参考项目深度研究.md  意大利突发新闻监控系统架构分析.md
backend/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
clients/tauri/: Cargo.toml  README.md  tauri.conf.json
clients/tauri/capabilities/: default.json
clients/tauri/icons/: icon.icns
clients/tauri/src/: lib.rs  main.rs
config/: hermes.crontab  logrotate.conf  news-sentry-realtime.service  news-sentry-realtime.timer  news-sentry.service  production-maintenance.crontab  realtime.crontab
config/classification/: rules-canada.yaml  rules-france.yaml  rules-fusion.yaml  rules-germany.yaml  rules-india.yaml  rules-ireland.yaml  rules-italy.yaml  rules-japan.yaml  rules-new-zealand.yaml  rules-south-korea.yaml  rules-united-kingdom.yaml  rules-v1.yaml  rules-vietnam.yaml
config/filters/: _template.yaml
config/output/: destinations.yaml
config/profiles/: cloud-vps.yaml  cloudflare.yaml  local-workstation.yaml
config/provider/: routes-cloudflare.yaml  routes.yaml
config/runtime/: ai_enrichment.yaml  collector.yaml  hermes.yaml  openclaw.yaml
config/sandbox/: cloud-vps.yaml  default.yaml  full.yaml  kol-experiment.yaml  local-workstation.yaml
config/security/: deployment-surface-policy.yaml
config/targets/: _template.yaml  africa-watch.yaml  africa.yaml  african-union.yaml  algeria.yaml  argentina.yaml  asean.yaml  asia-pacific.yaml  australia.yaml  austria.yaml  bangladesh.yaml  belgium.yaml  brazil.yaml  brics.yaml  canada.yaml  central-asia.yaml  chile.yaml  china-watch-en.yaml  climate-water-food.yaml  colombia.yaml  crisis-conflict.yaml  czechia.yaml  denmark.yaml  east-asia.yaml  egypt.yaml  energy-opec-iea.yaml  energy-transition.yaml  ethiopia.yaml  eu-policy.yaml  europe.yaml  european-union.yaml  finland.yaml  france.yaml  fusion.yaml  g20.yaml  g7.yaml  germany.yaml  global.yaml  greece.yaml  hungary.yaml  (+54 more)
config/toolmanifest/: opencli-baseline.yaml
data/eval/: eval-set-v1.json  eval-set-v2.json  eval-set-v3.json  report-v3-rules-v2.json
docker/: verify-bridge.sh
docker/chrome-native-messaging-host/: opencli.json
docker/chrome-policies/: opencli.json
docs/: 2026-05-17-frontend-full-capability-design.md  api-reference.md  architecture-overview.md  architecture.md  benchmark-tauri-vs-pywebview.md  breaking-intelligence.md  contracts-canonical.md  contributing.md  datasets-catalog-italy.md  deployment-guide.md  development-plan.md  external-integration-strategy.md  github-discoverability.md  global-scale-news-intelligence-architecture.md  integration-protocol.md  it-zh-bilingual-sop.md  it-zh-glossary.md  known-issues.md  local-client-architecture.md  news-classification-framework.md  newsevent-schema.md  performance-overhaul-design.md  plan-frontend-impl.md  plan-phase-25-async-infrastructure.md  plan-phase-27-ai-optimization.md  plan-phase-28-api-server.md  plan-phase-29-multi-target.md  plan-phase-30-impl.md  plan-phase-30-nlp-analysis.md  plan-phase-31-impl.md  plan-phase-31-nlp-api.md  plan-phase-32-entity-tracking.md  plan-phase-32-impl.md  plan-phase-33-impl.md  plan-phase-33-web-ui-nlp.md  plan-phase-34-impl.md  plan-phase-35-event-chains.md  plan-phase-35-impl.md  plan-phase-36-impl.md  plan-phase-36-narrative.md  (+9 more)
docs/adr/: 0001-canonical-contracts.md  0006-cli-entry-deferred.md  (+26 more)
rss-bridge/: config.ini.php
schemas/: classification.schema.json  deploymentprofile.schema.json  deploymentsurfacepolicy.schema.json  evalexample.schema.json  filterrules.schema.json  matrixgovernance.schema.json  newsevent.schema.json  outputdestinations.schema.json  outputresult.schema.json  pipelinecontext.schema.json  providerconfig.schema.json  sandbox-audit.schema.json  sandboxpolicy.schema.json  skillmanifest.schema.json  socialsource.schema.json  sourcechannel.schema.json  targetconfig.schema.json  toolmanifest.schema.json  toolrunresult.schema.json
scripts/: com.news-sentry.plist  install.ps1  install.sh  news-sentry.service  perf_webhook_stress.py
tests/: conftest.py  test_api_public_database_first.py  test_cloudflare_provider.py  test_deployment_surface_security.py  test_doctor.py  test_file_writer.py  test_providers_phase4.py  test_public_site_discoverability.py  test_publication_hygiene.py  test_run_log.py  test_sandbox.py
tools/: backup.sh  build_cloudflare_state_json.py  check_no_hardcoded_target.py  check_publication_hygiene.py  cloudflare_d1_backfill.py  cloudflare_d1_public_translation_backfill.py  cloudflare_live_quality_check.py  cloudflare_refresh_public_snapshots.py  deployed_surface_audit.py  deployment_surface_security.py  dev_progress.py  health_monitor.sh  public_app_latency_check.mjs  public_portal_browser_check.mjs  run_eval.py  run_realtime_collection.sh  scan_sensitive_data.py  security_audit.py  security_autofix_publisher.py  source_coverage_report.py  source_health_audit.py
(+2035 files in other folders)
