[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "news-sentry"
version = "1.0.0"
description = "Framework-neutral Agent Skill Pack for continuous news monitoring — Italy Breaking News reference target"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["news", "monitoring", "agent", "skill-pack", "italy", "breaking-news"]
authors = [
    { name = "XucroYuri" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary",
]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "feedparser>=6.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "jsonschema>=4.21",
    "types-jsonschema>=4.21",
]
proxy = [
    "httpx[socks]>=0.27",
]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.urls]
Homepage = "https://github.com/XucroYuri/NewsSentry"
Repository = "https://github.com/XucroYuri/NewsSentry"
Issues = "https://github.com/XucroYuri/NewsSentry/issues"
Documentation = "https://github.com/XucroYuri/NewsSentry/blob/main/docs/"

[project.scripts]
news-sentry = "news_sentry.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=news_sentry --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["tests/"]
