[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "news-sentry"
version = "2.0.0-rc3"
description = "Open-source AI news intelligence and OSINT monitoring platform for multilingual news, social media, canonical event graphs, and research workflows"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = [
    "ai",
    "news",
    "news-intelligence",
    "osint",
    "monitoring",
    "media-monitoring",
    "public-opinion",
    "social-media-monitoring",
    "multilingual",
    "event-graph",
    "knowledge-graph",
    "research-workflow",
    "journalism",
    "rss",
    "fastapi",
]
authors = [
    { name = "XucroYuri" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "feedparser>=6.0",
    "click>=8.1",
    "aiosqlite>=0.20",
    "cachetools>=5.3",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "jsonschema>=4.21",
    "types-jsonschema>=4.21",
]
proxy = [
    "httpx[socks]>=0.27",
]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
desktop = [
    "pywebview>=5.0",
    "pystray>=0.19",
    "Pillow>=10.0",
    "pywin32>=305; sys_platform == 'win32'",
]

[project.urls]
Homepage = "https://github.com/XucroYuri/NewsSentry#readme"
Repository = "https://github.com/XucroYuri/NewsSentry"
Issues = "https://github.com/XucroYuri/NewsSentry/issues"
Documentation = "https://github.com/XucroYuri/NewsSentry/blob/main/docs/"
Roadmap = "https://github.com/XucroYuri/NewsSentry/blob/main/docs/roadmap/global-scale-news-intelligence-architecture.md"
Security = "https://github.com/XucroYuri/NewsSentry/blob/main/SECURITY.md"

[project.scripts]
news-sentry = "news_sentry.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "--cov=news_sentry --cov-report=term-missing"
filterwarnings = [
    # aiosqlite/httpx 后台线程在测试结束后残留 — 无害
    "ignore:coroutine 'AsyncMockMixin._execute_mock_call' was never awaited:RuntimeWarning",
    # async 测试中 SQLite connection 未关闭 — pytest 会在测试后清理
    "ignore:unclosed database:ResourceWarning",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = "feedparser"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pystray"
ignore_missing_imports = true
