[package]
name = "news-sentry"
version = "0.1.0"
edition = "2021"
description = "News Sentry — 跨平台新闻情报监控桌面客户端"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
open = "5"

[lib]
name = "news_sentry_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
